force-app/main/default/objects/copado__JobStep__c/fields/copado__ConfigJson__c.field-meta.xml
<CustomField>
    <fullName>copado__ConfigJson__c</fullName>
    <label>ConfigJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>