force-app/main/default/objects/copado__JobStep__c/fields/copado__CustomType__c.field-meta.xml
<CustomField>
    <fullName>copado__CustomType__c</fullName>
    <description>Defines the type of configuration required for this step.</description>
    <inlineHelpText>Defines the type of configuration required for this step.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>