force-app/main/default/objects/copado__JobStep__c/fields/copado__Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Destination_Id__c</fullName>
    <formula>CASESAFEID(copado__JobExecution__r.copado__Destination__c)</formula>
    <label>Destination Id</label>
    <type>Text</type>
</CustomField>