force-app/main/default/objects/copado__JobStep__c/fields/copado__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Repository__c</fullName>
    <formula>BLANKVALUE(
    copado__JobExecution__r.copado__Snapshot__r.copado__Git_Repository__c, 
    BLANKVALUE(
        copado__JobExecution__r.copado__Pipeline__r.copado__Git_Repository__c,
        BLANKVALUE(
            copado__JobExecution__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c, 
            copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c
        )
    )
)</formula>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>