force-app/main/default/objects/copado__JobStep__c/fields/copado__JobExecution__c.field-meta.xml
<CustomField>
    <fullName>copado__JobExecution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Execution</label>
    <referenceTo>copado__JobExecution__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>