force-app/main/default/objects/copado__JobStep__c/fields/copado__JobTemplate__c.field-meta.xml
<CustomField>
    <fullName>copado__JobTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Template</label>
    <referenceTo>copado__JobTemplate__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>