force-app/main/default/objects/copado__JobStep__c/fields/copado__Parent_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Parent_Owner_Id__c</fullName>
    <formula>IF(NOT(ISBLANK( copado__JobExecution__r.copado__Deployment__c )), copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.OwnerId,
    IF(NOT(ISBLANK( copado__JobExecution__r.copado__Promotion__c )), copado__JobExecution__r.copado__Promotion__r.OwnerId, OwnerId))</formula>
    <label>Parent Owner Id</label>
    <type>Text</type>
</CustomField>