force-app/main/default/objects/copado__JobStep__c/fields/copado__Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline_Id__c</fullName>
    <formula>BLANKVALUE(
copado__JobExecution__r.copado__Pipeline__c,
BLANKVALUE(
    copado__JobExecution__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c, 
    BLANKVALUE(
        copado__JobExecution__r.copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__c,
        BLANKVALUE(
            copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__c, 
            copado__JobExecution__r.copado__Deployment__r.copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__c
        )
    )
)
)</formula>
    <label>Pipeline Id</label>
    <type>Text</type>
</CustomField>