force-app/main/default/objects/copado__JobStep__c/fields/copado__ResultDataJson__c.field-meta.xml
<CustomField>
    <fullName>copado__ResultDataJson__c</fullName>
    <label>Result Data Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>